name:                cryptopals
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/mbernat/cryptopals#readme
license:             BSD3
license-file:        LICENSE
author:              Marek Bernat
maintainer:          marek.bernat@gmail.com
copyright:           2017 Marek Bernat
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , Set1.Ch3
                     , Set1.Ch4
                     , Set1.Ch6
  build-depends:       base >= 4.7 && < 5
                     , base64-bytestring
                     , bytestring
                     , containers
                     , split
  default-language:    Haskell2010

executable cryptopals-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , cryptopals
  default-language:    Haskell2010

test-suite cryptopals-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.hs
  other-modules:       LibTest
                     , Set1Test
  build-depends:       base
                     , bytestring
                     , cryptopals
                     , tasty
                     , tasty-hunit
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/mbernat/cryptopals
